* Adds integration for uploading profile pics
Signed-off-by: Matthew Dromazos <dromazmj@dukes.jmu.edu>